--- a/app/views/create.html
+++ b/app/views/create.html
@@ -9,7 +9,7 @@
             <h3>Form Properties</h3>
             <div class="row">
                 <div class="span2">Form ID: </div>
-                <div class="span4"><input type="text" name="form-id" ng-disabled="true" ng-model="form.form_id"></div>
+                <div class="span4"><input type="text" name="form-id" ng-disabled="false" ng-model="form.form_id"></div>
             </div>
             <div class="row">
                 <div class="span2">Form Name:</div>
