--- a/app/views/directive-templates/form/form.html
+++ b/app/views/directive-templates/form/form.html
@@ -3,7 +3,7 @@
 <div ng-show="!form.submitted">
     <div class="field row">
         <div class="span2">Form ID:</div>
-        <div class="span4">1</div>
+        <div class="span4">{{ form.form_id }}</div>
     </div>
     <form name="myForm" id="myForm">
         <div ng-repeat="field in form.form_fields">
